Update sidebar layout

--- a/index.html
+++ b/index.html
@@ -8,56 +8,75 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar">sidebar
-            <div class="company-brand"> 
-                <img src="" alt="company icon">
-                <div>Dashboard</div>
+        <div class="sidebar">
+
+            <div class="company-brand">
+                <button>
+                    <img src="./imgs/placeholder_icon.svg" alt="company icon">
+                    <span>Dashboard</span>
+                </button>
             </div>
 
             <div class="nav">
-                <div class="home">
-                    <img src="" alt="">
-                    <div>Home</div>
-                </div>
-                <div class="profile">
-                    <img src="" alt="">
-                    <div>Profile</div>
-                </div>
-                <div class="messages">
-                    <img src="" alt="">
-                    <div>Messages</div>
-                </div>
-                <div class="history">
-                    <img src="" alt="">
-                    <div>History</div>
-                </div>
-                <div class="tasks">
-                    <img src="" alt="">
-                    <div>Tasks</div>
-                </div>
-                <div class="communities">
-                    <img src="" alt="">
-                    <div>Communities</div>
-                </div>
+                <button>
+                    <img src="./imgs/placeholder_icon.svg" alt="home icon">
+                    <span>Home</span>
+                </button>
+                
+                <button>
+                    <img src="./imgs/placeholder_icon.svg" alt="profile icon">
+                    <span>Profile</span>
+                </button>
+
+                <button>
+                    <img src="./imgs/placeholder_icon.svg" alt="messages icon">
+                    <span>Messages</span>
+                </button>
+
+                <button>
+                    <img src="./imgs/placeholder_icon.svg" alt="history icon">
+                    <span>History</span>
+                </button>
+
+                <button>
+                    <img src="./imgs/placeholder_icon.svg" alt="tasks icon">
+                    Tasks
+                </button>
+                
+                <button>
+                    <img src="./imgs/placeholder_icon.svg" alt="communities icon">
+                    <span>Communities</span>
+                </button>
             </div>
 
             <div class="otehr-opetions">
-                <div>
-                    <img src="" alt="">
-                    <div>Settings</div>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <div>Support</div>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <div>Privacy</div>
-                </div>
+                <button>
+                    <img src="./imgs/placeholder_icon.svg" alt="settings icon">
+                    <span>Settings</span>
+                </button>
+
+                <button>
+                    <img src="./imgs/placeholder_icon.svg" alt="support icon">
+                    <span>Support</span>
+                </button>
+
+                <button>
+                    <img src="./imgs/placeholder_icon.svg" alt="privacy icon">
+                    <span>Privacy</span>
+                </button>
             </div>
 
         </div>
-        <div class="header">header</div>
+
+        <div class="header">header
+            <form action="get">
+                <img src="" alt="search icon">
+                <input type="text" id="search-bar">
+            </form>
+        </div>
+
+
+
         <div class="main">main</div>
     </div>
 </body>
